[PRMT-503] call fake MHS with EHR request query
